# idstool

./: README.md  pyproject.toml
src/idstool/: __init__.py  ids_classes.py  serializer.py
