
[project]
name = "idstool"
description = " Python Tool to create IDS (Information delivery specification) files"
readme = "README.md"
version = "0.1.3"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
]
license = {file = "LICENSE.txt"}
keywords = ["IDS", "Information Delivery Specification", "openBIM"]
authors = [
    { name = "Alexander Hammett", email = "alexander.hammett@preisigag.ch" }
]
dependencies = [
]


[project.urls]
"Homepage" = "https://github.com/alexander-hammett/idstool"

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
